[project]
name = "json-lines-to-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seokbong131", email = "243122144+seokbong131@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
json-lines-to-markdown = "json_lines_to_markdown:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
