[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.26,<0.12.0"]

[dependency-groups]
dev = ["ruff>=0.15.21", "taplo>=0.9.3"]

[project]
authors = [
  { name = "seokbong131", email = "243122144+seokbong131@users.noreply.github.com" },
]
dependencies = ["jsonlines>=4.0.0", "pydantic>=2.13.4"]
description = "Add your description here"
name = "json-lines-to-markdown"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[project.scripts]
json-lines-to-markdown = "json_lines_to_markdown:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # bugbear
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "SIM", # simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["json_lines_to_markdown"]
